--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   flutter_screenutil: ^5.9.3
+  go_router: ^16.1.0
 
 dev_dependencies:
   flutter_test:
