--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   riverpod_annotation: ^2.6.1
   flutter_screenutil: ^5.9.3
   go_router: ^16.1.0
+  flutter_svg: ^2.2.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,7 @@ dev_dependencies:
   build_runner: ^2.5.4
   custom_lint: ^0.7.6
   riverpod_lint: ^2.6.5
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,6 +71,7 @@ flutter:
   # 1. Declare the assets directory
   assets:
     - assets/fonts/poppins/
+    - assets/icons/
 
   # 2. Define the font family and its assets
   fonts:
@@ -145,3 +149,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: "launcher_icon"   # can be true or a string name for the icon
+  ios: true
+  image_path: "assets/icons/app_icon.png" # Path to your source icon
+
